objects/CustomLookupData__c.object
<CustomObject>
    <description>Store the lookup data for the lookup queries.</description>
    <fields>
        <fullName>Audience__c</fullName>
        <description>Stores the value for Audience configuration attribute.</description>
        <label>Audience Age</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3 - 25</fullName>
                </value>
                <value>
                    <fullName>26 - 50</fullName>
                </value>
                <value>
                    <fullName>51 - 99</fullName>
                </value>
                <value>
                    <fullName>Adults</fullName>
                    <isActive>false</isActive>
                    <label>Adults</label>
                </value>
                <value>
                    <fullName>Elders</fullName>
                    <isActive>false</isActive>
                    <label>Elders</label>
                </value>
                <value>
                    <fullName>Kids</fullName>
                    <isActive>false</isActive>
                    <label>Kids</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Content_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content Name</label>
        <referenceTo>Content__c</referenceTo>
        <relationshipLabel>Custom Lookup Data</relationshipLabel>
        <relationshipName>Custom_Lookup_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <description>Value from Content Config Attribute.</description>
        <label>Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Hard Copy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impressions__c</fullName>
        <description>Stores the value for Impressions configuration attribute.</description>
        <label>Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ListPrice__c</fullName>
        <description>Used to store the custom list price for the product.</description>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Stores the value for Location configuration attribute.</description>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>Texas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Range__c</fullName>
        <label>Max Range</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Range__c</fullName>
        <label>Min Range</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Product object</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Custom Lookup Data</relationshipLabel>
        <relationshipName>Custom_Lookup_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reaction__c</fullName>
        <description>Stores the value for reaction configuration attribute</description>
        <label>Reaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>16 rxns</fullName>
                </value>
                <value>
                    <fullName>48 rxns</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reactions__c</fullName>
        <description>Value for the Reactions configuration attribute</description>
        <label>Reactions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>4 rxns</fullName>
                </value>
                <value>
                    <fullName>16 rxns</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <description>Stores the value for Vertical configuration attribute.</description>
        <label>Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Pharma</fullName>
                </value>
                <value>
                    <fullName>Health Care</fullName>
                    <isActive>false</isActive>
                    <label>Health Care</label>
                </value>
                <value>
                    <fullName>High Tech</fullName>
                    <isActive>false</isActive>
                    <label>High Tech</label>
                </value>
                <value>
                    <fullName>Life Science</fullName>
                    <isActive>false</isActive>
                    <label>Life Science</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty__c</fullName>
        <description>Value used for the Warranty Configuration Attribute</description>
        <label>Warranty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12 months</fullName>
                </value>
                <value>
                    <fullName>24 months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Custom Lookup Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Reactions__c</columns>
        <columns>Warranty__c</columns>
        <columns>Reaction__c</columns>
        <columns>ListPrice__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Custom Lookup Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Lookup Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>